--- a/todo_root/todos/static/main.css
+++ b/todo_root/todos/static/main.css
@@ -1,10 +1,10 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,500;0,700;1,500&display=swap');*/
-/*@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,500;0,700;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
-/*body {*/
-/*    font-family: 'Chakra Petch', sans-serif !important;*/
-/*}*/
+body {
+    font-family: 'Chakra Petch', sans-serif !important;
+}
 
-/*a, input[type=submit], [type=button], [type=reset] {*/
-/*    font-family: 'Rubik Mono One', sans-serif !important;*/
-/*}*/
+a, input[type=submit], [type=button], [type=reset] {
+    font-family: 'Staatliches', sans-serif !important;
+}
