--- a/todo_root/todos/templates/todos/index.html
+++ b/todo_root/todos/templates/todos/index.html
@@ -3,26 +3,26 @@
 {% block content %}
     {% if todo_list %}
         <h1>Todo List</h1>
-        <table>
-            <thead>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
             <tr>
                 <th>Title</th>
-                <th>Status</th>
-                <th>Date Created</th>
-                <th>Date Due</th>
-                <th colspan="3"><a href="{% url 'todos:new' %}">Add a Todo</a></th>
+                <th class="text-center">Status</th>
+                <th class="text-center">Date Created</th>
+                <th class="text-center">Date Due</th>
+                <th colspan="3" class="text-center"><a href="{% url 'todos:new' %}">Add a Todo</a></th>
             </tr>
             </thead>
             <tbody>
             {% for todo in todo_list %}
-                <tr>
+                <tr class="table-{% if todo.completed %}success{% elif todo.due_today %}warning{% elif todo.overdue %}danger{% else %}transparent{% endif %}">
                     <td>{{ todo.title }}</td>
-                    <td>{{ todo.completed|yesno:"Completed,Incomplete" }}</td>
-                    <td>{{ todo.created }}</td>
-                    <td>{{ todo.due }}</td>
-                    <td><a href="{% url 'todos:delete' todo.id %}">Delete</a></td>
-                    <td><a href="{% url 'todos:edit' todo.id %}">Edit</a></td>
-                    <td><a href="{% url 'todos:detail' todo.id %}">View</a></td>
+                    <td class="text-center">{{ todo.completed|yesno:"Completed,Incomplete" }}</td>
+                    <td class="text-center">{{ todo.created }}</td>
+                    <td class="text-center">{{ todo.due }}</td>
+                    <td class="text-center"><a href="{% url 'todos:delete' todo.id %}">Delete</a></td>
+                    <td class="text-center"><a href="{% url 'todos:edit' todo.id %}">Edit</a></td>
+                    <td class="text-center"><a href="{% url 'todos:detail' todo.id %}">View</a></td>
                 </tr>
             {% endfor %}
             </tbody>
