--- a/todo_root/todos/templates/todos/todo_detail.html
+++ b/todo_root/todos/templates/todos/todo_detail.html
@@ -2,7 +2,7 @@
 {% block head_title %}{{ todo.title }}{% endblock %}
 {% block content %}
     <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">{{ todo.title }}</h1>
-    <h2 class="my-2 p-2 bg-{{ todo.completed|yesno:"success,warning" }} text-white shadow-sm">{{ todo.completed|yesno:"Completed,Incomplete" }}</h2>
+    <h2 class="my-2 p-2 bg-{{ todo.completed|yesno:"success,warning" }} text-white border shadow-sm">{{ todo.completed|yesno:"Completed,Incomplete" }}</h2>
     <h3 class="my-2 p-2 border shadow-sm bg-white text-{% if todo.completed %}success{% elif todo.due_today %}warning{% elif todo.overdue %}danger{% else %}transparent{% endif %}">
         Due {{ todo.due }}{% if todo.due_today %} (*TA-DAY*){% elif todo.overdue %} (*OVERDUE*){% endif %}</h3>
     <h4 class="my-2 p-2 border shadow-sm bg-light">Created {{ todo.created }}</h4>
