--- a/todo_root/todos/templates/todos/todo_edit_form.html
+++ b/todo_root/todos/templates/todos/todo_edit_form.html
@@ -1,11 +1,31 @@
 {% extends 'base.html' %}
 {% block head_title %}Edit Todo{% endblock %}
 {% block content %}
-    <h1>{{ todo.title }}</h1>
     <form method="POST">{% csrf_token %}
-        {{ form.as_p }}
-        <a href="{% url 'todos:index' %}"><input type="button" value="Cancel" autofocus></a>
-        <input type="reset" value="Reset Form">
-        <input type="submit" value="Update">
+        <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Title: {{ form.title }}</h1>
+        <h2 class="my-2 p-2 bg-light text-primary border shadow-sm">Complete: &nbsp;{{ form.completed }}</h2>
+        <h3 class="my-2 p-2 border shadow-sm bg-white text-info">Due: {{ form.due }}</h3>
+        <h4 class="my-2 p-2 border shadow-sm bg-light">Created: {{ form.created }}</h4>
+        <p class="m-5 p-5 border shadow">{{ form.description }}</p>
+        <div class="d-flex flex-wrap justify-content-around">
+            <a href="{% url 'todos:index' %}">
+                <input class="btn btn-lg btn-secondary border shadow rounded-pill my-4 px-4 py-2"
+                       type="button" value="Cancel">
+            </a>
+            <input class="btn btn-lg btn-warning border shadow rounded-pill my-4 px-4 py-2"
+                   type="reset" value="Reset Form">
+            <input class="btn btn-lg btn-primary border shadow rounded-pill my-4 px-4 py-2"
+                   type="submit" value="Update">
+        </div>
+        {% if form.errors %}
+            <div class="mt-5 alert alert-dark shadow-sm">
+                <button type="button" class="close" data-dismiss="alert">×</button>
+                {% for field in form %}
+                    {% if field.errors %}
+                        {{ field.label }}: {{ field.errors|striptags }}
+                    {% endif %}
+                {% endfor %}
+            </div>
+        {% endif %}
     </form>
 {% endblock %}
