Style auth pages; fix error popup; add footer

--- a/todo_root/todos/templates/form_error_alert.html
+++ b/todo_root/todos/templates/form_error_alert.html
@@ -1,9 +1,9 @@
 {% if form.errors %}
-    <div class="mt-5 alert alert-dark shadow-sm">
+    <div class="mt-3 alert alert-dark shadow-sm">
         <button type="button" class="close" data-dismiss="alert">×</button>
         {% for field in form %}
             {% if field.errors %}
-                {{ field.label }}: {{ field.errors|striptags }}
+                {{ field.label }}: {{ field.errors|striptags }}<br>
             {% endif %}
         {% endfor %}
     </div>
