--- a/todo_root/todos/templates/accounts/signup.html
+++ b/todo_root/todos/templates/accounts/signup.html
@@ -1,9 +1,24 @@
 {% extends 'base.html' %}
 {% block head_title %}Sign Up{% endblock %}
 {% block content %}
-    <h1 class="text-center">Sign Up</h1>
+    <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Sign Up</h1>
     <form method="POST"> {% csrf_token %}
-        {{ form }}
-        <button type="submit">Sign Up</button>
+        <h2 class="mt-2 mb-0 p-2 bg-light text-primary border shadow-sm">
+            {{ form.username.label_tag }} {{ form.username }}
+        </h2>
+        <p class="mb-2 mt-0 p-2 border shadow-sm bg-light">{{ form.username.help_text }}</p>
+        <h3 class="my-2 p-2 border shadow-sm bg-white text-info">
+            {{ form.password1.label_tag }} {{ form.password1 }}
+        </h3>
+        <h3 class="my-2 p-2 border shadow-sm bg-white text-info">
+            {{ form.password2.label_tag }} {{ form.password2 }}
+        </h3>
+        <div class="d-flex flex-wrap justify-content-around">
+            <input class="btn btn-lg btn-warning border shadow rounded-pill my-4 px-4 py-2"
+                   type="reset" value="Reset Form">
+            <input class="btn btn-lg btn-primary border shadow rounded-pill my-4 px-4 py-2"
+                   type="submit" value="Sign up">
+        </div>
+        {% include 'form_error_alert.html' %}
     </form>
 {% endblock %}
