--- a/todo_root/todos/templates/base.html
+++ b/todo_root/todos/templates/base.html
@@ -10,6 +10,7 @@
 <body>
 <div class="container">
     {% block content %}{% endblock %}
+    {% include 'footer.html' %}
 </div>
 {% include 'bootstrap_js.html' %}
 </body>
