--- a/todo_root/todos/templates/home.html
+++ b/todo_root/todos/templates/home.html
@@ -2,11 +2,24 @@
 {% block head_title %}Home{% endblock %}
 {% block content %}
     {% if user.is_authenticated %}
-        Hi {{ user }}<br>
-        <a href="{% url 'logout' %}">Logout</a>
+        <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Hi, {{ user }}!</h1>
+        <div class="d-flex flex-wrap justify-content-around">
+            <a href="{% url 'todos:index' %}">
+                <input class="btn btn-lg btn-primary border shadow rounded-pill my-4 px-4 py-2"
+                       type="button" value="Todo List">
+            </a>
+        </div>
     {% else %}
-        Not logged in: <a href="{% url 'login' %}">login</a>
-        or
-        <a href="{% url 'accounts:signup' %}">sign up</a>
+        <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Not Logged In</h1>
+        <div class="d-flex flex-wrap justify-content-around">
+            <a href="{% url 'accounts:signup' %}">
+                <input class="btn btn-lg btn-warning border shadow rounded-pill my-4 px-4 py-2"
+                       type="button" value="Sign up">
+            </a>
+            <a href="{% url 'login' %}">
+                <input class="btn btn-lg btn-primary border shadow rounded-pill my-4 px-4 py-2"
+                       type="button" value="Log in">
+            </a>
+        </div>
     {% endif %}
 {% endblock %}
