--- a/todo_root/todos/templates/registration/login.html
+++ b/todo_root/todos/templates/registration/login.html
@@ -1,9 +1,20 @@
 {% extends 'base.html' %}
 {% block head_title %}Login{% endblock %}
 {% block content %}
-    <h1 class="text-center">Login</h1>
+    <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Log in</h1>
     <form method="POST"> {% csrf_token %}
-        {{ form }}
-        <button type="submit">Login</button>
+        <h2 class="my-2 p-2 bg-light text-primary border shadow-sm">
+            {{ form.username.label_tag }} {{ form.username }} {{ form.username.help_text }}
+        </h2>
+        <h3 class="my-2 p-2 border shadow-sm bg-white text-info">
+            {{ form.password.label_tag }} {{ form.password }} {{ form.password.help_text }}
+        </h3>
+        <div class="d-flex flex-wrap justify-content-around">
+            <input class="btn btn-lg btn-warning border shadow rounded-pill my-4 px-4 py-2"
+                   type="reset" value="Reset Form">
+            <input class="btn btn-lg btn-primary border shadow rounded-pill my-4 px-4 py-2"
+                   type="submit" value="Log in">
+        </div>
+        {% include 'form_error_alert.html' %}
     </form>
 {% endblock %}
