Redirect after login

--- a/todo_root/todos/templates/home.html
+++ b/todo_root/todos/templates/home.html
@@ -2,13 +2,7 @@
 {% block head_title %}Home{% endblock %}
 {% block content %}
     {% if user.is_authenticated %}
-        <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Hi, {{ user }}!</h1>
-        <div class="d-flex flex-wrap justify-content-around">
-            <a href="{% url 'todos:index' %}">
-                <input class="btn btn-lg btn-primary border shadow rounded-pill my-4 px-4 py-2"
-                       type="button" value="Todo List">
-            </a>
-        </div>
+        <meta http-equiv="REFRESH" content="0;url={% url 'todos:index' %}">
     {% else %}
         <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Not Logged In</h1>
         <div class="d-flex flex-wrap justify-content-around">
