--- a/todo_root/todos/templates/todos/index.html
+++ b/todo_root/todos/templates/todos/index.html
@@ -2,9 +2,9 @@
 {% block head_title %}Todo List{% endblock %}
 {% block content %}
     {% if todo_list %}
-        <h1 class="text-center">Todo List for {{ user.username }}</h1>
+        <h1 class="mt-3 mb-3 p-3 text-center shadow-sm border bg-dark text-light">Todo List for {{ user.username }}</h1>
         <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
+            <thead class="thead-light">
             <tr>
                 <th>Title</th>
                 <th class="text-center">Status</th>
